--- a/hosting/public/index.html
+++ b/hosting/public/index.html
@@ -35,26 +35,62 @@
             <button type="button" class="btn btn-outline-success float-right">新規プロジェクト</button>
         </h3>
         <div class="row mt-5">
+
             <div class="col-sm-6">
-              <div class="card">
+              <div class="card mb-3">
+                  <img src="https://imaging.nikon.com/lineup/lens/zoom/normalzoom/af-s_dx_18-140mmf_35-56g_ed_vr/img/sample/sample1_l.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
+                  <h5 class="card-title">project title</h5>
                   <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><a href="#" class="card-link">Open in Kegaki</a></li>
+                    <li class="list-group-item"><a href="#" class="card-link">Open in Yattoko</a></li>
+                    <li class="list-group-item"><a href="#" class="card-link">Open in Shikkui</a></li>
+                  </ul>
               </div>
             </div>
+
             <div class="col-sm-6">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="card mb-3">
+                    <img src="https://www.instagram.com/p/BgYuBnfFXPQ/media/?size=l" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">project title</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  </div>
+                  <ul class="list-group list-group-flush">
+                      <li class="list-group-item"><a href="#" class="card-link">Open in Kegaki</a></li>
+                      <li class="list-group-item"><a href="#" class="card-link">Open in Yattoko</a></li>
+                      <li class="list-group-item"><a href="#" class="card-link">Open in Shikkui</a></li>
+                    </ul>
                 </div>
               </div>
-            </div>
+
+              <div class="col-sm-6">
+                  <div class="card mb-3">
+                      <img src="https://imaging.nikon.com/lineup/lens/zoom/normalzoom/af-s_dx_18-140mmf_35-56g_ed_vr/img/sample/sample1_l.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">project title</h5>
+                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><a href="#" class="card-link">Open in Kegaki</a></li>
+                        <li class="list-group-item"><a href="#" class="card-link">Open in Yattoko</a></li>
+                        <li class="list-group-item"><a href="#" class="card-link">Open in Shikkui</a></li>
+                      </ul>
+                  </div>
+                </div>
+            
           </div>
     </div>
+
+    <nav class="navbar sticky-bottom navbar-dark bg-dark">
+        <div class="container">
+            <span class="navbar-text">
+                Copyright (c) 2018-2019 Fukui Masanori, Jo Hagikura & Yuji Sasaki All Rights Reserved.
+            </span>
+        </div>
+      </nav>
 
     <!-- Optional JavaScript -->
 
