--- a/hosting/public/index.html
+++ b/hosting/public/index.html
@@ -13,7 +13,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">Kasgai</a>
+        <a class="navbar-brand" href="index.html">Kasgai</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -32,7 +32,7 @@
         <h3>
             Projects
             <small class="text-muted ml-3">参加中のプロジェクト</small>
-            <button type="button" class="btn btn-outline-success float-right">新規プロジェクト</button>
+            <a role="button" class="btn btn-outline-success float-right" href="newproject.html">新規プロジェクト</a>
         </h3>
         <div class="row mt-5">
 
