Revert "change card design"
This reverts commit 02785e7ae16839b3a06e9f54e5aab3fb817d429b.

--- a/hosting/public/index.html
+++ b/hosting/public/index.html
@@ -34,7 +34,7 @@
             <small class="text-muted ml-3">参加中のプロジェクト</small>
             <a role="button" class="btn btn-outline-success float-right" href="newproject.html">新規プロジェクト</a>
         </h3>
-        <div class="card-columns  mt-5" id="cardContainer">
+        <div class="row mt-5" id="cardContainer">
 
             
             
