--- a/hosting/public/signup.html
+++ b/hosting/public/signup.html
@@ -11,9 +11,12 @@
     <title>Kasgai</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="index.html">Kasgai</a>
+      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f7f7f7">
+          <div class="container">
+            
+            <a class="navbar-brand" href="index.html">
+                <img src="icon.jpeg" width="30" height="30" alt="">
+              Kasgai</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
