--- a/hosting/public/index.html
+++ b/hosting/public/index.html
@@ -15,7 +15,7 @@
       <div class="container">
         
         <a class="navbar-brand" href="index.html">
-            <img src="icon.jpeg" width="30" height="30" alt="">
+            <img src="asset/icon.jpg" width="30" height="30" alt="">
           Kasgai</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
