--- a/hosting/public/admintool/index.html
+++ b/hosting/public/admintool/index.html
@@ -28,6 +28,8 @@
 		};
 		firebase.initializeApp(config);
 	</script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" type="text/css" />
 	<script src="index.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
 		integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
@@ -65,7 +67,9 @@
 		<h3 id="detail" class="mt-5 mb-3"></h3>
 		<h5 class="mt-3 mb-3">概要</h5>
 		<ul id="summary" class="list-group list-group-flush">
-			  </ul>
+		</ul>
+		<h5 class="mt-3 mb-3">最終構造</h5>
+		<div id="network"></div>
 		<h5 class="mt-3 mb-3">ログ</h5>
 		<table class="table table-striped">
 			<thead>
