--- a/hosting/public/admintool/index.html
+++ b/hosting/public/admintool/index.html
@@ -68,7 +68,18 @@
 		<h5 class="mt-3 mb-3">概要</h5>
 		<ul id="summary" class="list-group list-group-flush">
 		</ul>
-		<h5 class="mt-3 mb-3">最終構造</h5>
+		<h5 class="mt-3 mb-3">ビジュアライズ</h5>
+		<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+			<div class="btn-group ml-auto" role="group" aria-label="First group">
+			  <button type="button" class="btn btn-secondary" onclick="firstVis();">First</button>
+			  <button type="button" class="btn btn-secondary" onclick="backVis();">Back</button>
+			</div>
+			<p id="shownDataIndex" class="mr-3 ml-3">100 / 3</p>
+			<div class="btn-group mr-auto" role="group" aria-label="Second group">
+			  <button type="button" class="btn btn-secondary" onclick="nextVis();">Next</button>
+			  <button type="button" class="btn btn-secondary" onclick="lastVis();">Last</button>
+			</div>
+		  </div>
 		<div id="network"></div>
 		<h5 class="mt-3 mb-3">ログ</h5>
 		<table class="table table-striped">
