--- a/hosting/public/admintool/survey.html
+++ b/hosting/public/admintool/survey.html
@@ -7,7 +7,7 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
 		integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-	<title>Admin Tool</title>
+	<title>Admin Tool - Survey</title>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
 		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
@@ -30,7 +30,7 @@
 	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" type="text/css" />
-	<script src="index.js" type="text/javascript"></script>
+	<script src="survey.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
 		integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
 		crossorigin="anonymous"></script>
@@ -55,49 +55,28 @@
 					<span class="navbar-text" id="greeting"></span>
 				</div>
 				<div class="navbar-nav">
-						<a class="nav-item nav-link" href="../survey.html">アンケート</a>
+					<a class="nav-item nav-link" href="../survey.html">アンケート</a>
 					<a class="nav-item nav-link" href="../logout.html">ログアウト</a>
 				</div>
 			</div>
 		</div>
 	</nav>
 	<div class="container">
-		<h3 class="mt-5 mb-3">Projects</h3>
-		<ul id="projects" class="list-group list-group-flush">
+		<h3 class="mt-5 mb-3">Surveys<a id="saveBtn" class="btn btn-outline-dark float-right" href="survey.html">新規作成</a></h3>
+		<ul id="surveys" class="list-group list-group-flush">
 		</ul>
 		<h3 id="detail" class="mt-5 mb-3"></h3>
-		<h5 class="mt-3 mb-3">概要</h5>
-		<ul id="summary" class="list-group list-group-flush">
-		</ul>
-		<h5 class="mt-3 mb-3">ビジュアライズ</h5>
-		<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-			<div class="btn-group ml-auto" role="group" aria-label="First group">
-				<button type="button" class="btn btn-secondary" onclick="firstVis();">First</button>
-				<button type="button" class="btn btn-secondary" onclick="backVis();">Back</button>
-			</div>
-			<p id="shownDataIndex" class="mr-3 ml-3">100 / 3</p>
-			<div class="btn-group mr-auto" role="group" aria-label="Second group">
-				<button type="button" class="btn btn-secondary" onclick="nextVis();">Next</button>
-				<button type="button" class="btn btn-secondary" onclick="lastVis();">Last</button>
-			</div>
-		</div>
-		<div class="mt-3 mb-3" id="network"></div>
-		<table class="table table-striped">
-			<tbody id="visualizeSummary">
-			</tbody>
-		</table>
-		<h5 class="mt-3 mb-3">ログ</h5>
-		<table class="table table-striped">
-			<thead>
-				<tr>
-					<th scope="col">Time</th>
-					<th scope="col">Code</th>
-					<th scope="col">Elapsed Time</th>
-				</tr>
-			</thead>
-			<tbody id="log">
-			</tbody>
-		</table>
+		<h5 class="mt-3 mb-3">編集 - <span id="editTitle"></span><button type="submit" id="saveBtn" class="btn btn-outline-dark float-right" onclick="save();">保存</button></h5>
+			<form>
+					<div class="form-group">
+							<label for="exampleFormControlTextarea1">タイトル</label>
+							<input id="titleInput" class="form-control" type="text" placeholder="Title">
+						</div>
+				<div class="form-group">
+					<label for="exampleFormControlTextarea1">CSV</label>
+					<textarea id="csvInput"  class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Paste CSV Here!"></textarea>
+				</div>
+			</form>
 	</div>
 </body>
 
