--- a/hosting/public/surveyform.html
+++ b/hosting/public/surveyform.html
@@ -103,6 +103,7 @@
             </div>
 
         </div>
+        <button class="btn btn-primary mt-5 btn-lg btn-block" type="submit">回答を送信</button>
         </form>
     </div>
 </body>
