--- a/hosting/public/surveyform.html
+++ b/hosting/public/surveyform.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <title>Admin Tool - Survey</title>
+    <title>Kasgai - Survey</title>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
@@ -103,7 +103,7 @@
             </div>
 
         </div>
-        <button class="btn btn-primary mt-5 btn-lg btn-block" type="submit">回答を送信</button>
+        <button class="btn btn-primary mt-5 btn-lg btn-block" onclick="save();">回答を送信</button>
         </form>
     </div>
 </body>
