add hyogo-u select

--- a/hosting/public/newproject.html
+++ b/hosting/public/newproject.html
@@ -49,6 +49,12 @@
                       <label for="inputTemplate">テンプレート</label>
                       <select class="form-control" id="inputTemplate">
                       </select>
+                      <br>
+                      <label for="shikkuiTemplate">shikkui テンプレート</label>
+                      <select class="form-control" id="shikkuiTemplate">
+                        <option value="toolbox.xml">ノーマル</option>
+                        <option value="toolbox-hyogo-u.xml">hyogo-u</option>
+                      </select>
                     </div>
                   <button type="button" class="btn btn-primary float-right" id="createButton">作成</button>
                 </form>
